Updated filesystems, added fstab_unknown_device_errors

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 fstab syntax highlighting
 
-Features: 
-  - let fstab_unknown_fs_errors = 0 if you do not want to highlight unknown filesystems as errors
+Options:
+  let fstab_unknown_fs_errors = 1
+    highlight unknown filesystems as errors
+
+  let fstab_unknown_device_errors = 0
+    do not highlight unknown devices as errors
 
